--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,38 +22,46 @@
     </android.support.design.widget.AppBarLayout>
 
     <include layout="@layout/content_main" />
-    <TextView android:id="@+id/textView_connecting"
+<!--Prueba para grafica -->
+    <include layout="@layout/graph_view" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView android:id="@+id/textView_connecting"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:stackFromBottom="true"
-        android:layout_weight="1"
-        />
-    <TextView android:id="@+id/tv_paired_devices"
+        android:stackFromBottom="true" />
+
+        <TextView android:id="@+id/tv_paired_devices"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="2"
-        android:layout_gravity="top|left"
+            android:layout_gravity="top|left"
         android:text="@string/paired_devices_title"
         android:textSize="12sp"
         android:layout_marginTop="55dp"/>
-    <ListView android:id="@+id/paired_devices"
+
+        <ListView android:id="@+id/paired_devices"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tv_paired_devices"/>
+
+        <TextView android:id="@+id/tv_new_devices"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:stackFromBottom="true"
-        android:layout_weight="1"
-        />
-    <TextView android:id="@+id/tv_new_devices"
+        android:text="@string/new_devices_title"
+        android:textSize="12sp"
+        android:layout_below="@+id/paired_devices"/>
+
+       <ListView android:id="@+id/new_devices"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:stackFromBottom="true"
-        android:layout_weight="1"
-        />
-    <ListView android:id="@+id/new_devices"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:stackFromBottom="true"
-        android:layout_weight="1"
-        />
+           android:layout_below="@+id/tv_new_devices"/>
+    </RelativeLayout>
+
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
