Countdown for monitoring

--- a/app/src/main/res/layout/activity_monitor.xml
+++ b/app/src/main/res/layout/activity_monitor.xml
@@ -18,7 +18,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <TextView
-            android:id="@+id/main_value"
+            android:id="@+id/monitor_main_value"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingLeft="20dp"
@@ -28,14 +28,14 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/main_value"
-            android:layout_toRightOf="@+id/main_value"
+            android:layout_alignBottom="@+id/monitor_main_value"
+            android:layout_toRightOf="@+id/monitor_main_value"
             android:src="@drawable/common_full_open_on_phone"/>
         <TextView
-            android:id="@+id/second_value"
+            android:id="@+id/monitor_second_value"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/main_value"
+            android:layout_below="@+id/monitor_main_value"
             android:paddingLeft="30dp"
             android:paddingTop="15dp"
             android:textSize="50dp"
@@ -43,14 +43,15 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/second_value"
-            android:layout_toRightOf="@+id/second_value"
+            android:layout_alignBottom="@+id/monitor_second_value"
+            android:layout_toRightOf="@+id/monitor_second_value"
             android:src="@drawable/common_full_open_on_phone"/>
+
         <TextView
-            android:id="@+id/third_value"
+            android:id="@+id/monitor_third_value"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/second_value"
+            android:layout_below="@+id/monitor_second_value"
             android:paddingLeft="30dp"
             android:paddingTop="15dp"
             android:textSize="50dp"
@@ -58,8 +59,8 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/third_value"
-            android:layout_toRightOf="@+id/third_value"
+            android:layout_alignBottom="@+id/monitor_third_value"
+            android:layout_toRightOf="@+id/monitor_third_value"
             android:src="@drawable/common_full_open_on_phone"/>
         <WebView
             android:id="@+id/webView"
