--- a/app/src/main/res/layout/activity_new_process.xml
+++ b/app/src/main/res/layout/activity_new_process.xml
@@ -41,6 +41,6 @@
         android:layout_below="@+id/new_et_time"
         android:layout_centerHorizontal="true"
         android:textSize="20dp"
-        android:textColor="@color/common_signin_btn_text_dark"/>
-
+        android:textColor="@color/common_signin_btn_text_dark"
+        android:onClick="StartProcess"/>
 </RelativeLayout>
