--- a/app/src/main/res/layout/rect_activity_measurements.xml
+++ b/app/src/main/res/layout/rect_activity_measurements.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.nando.arti.MeasurementsActivity"
+    tools:context=".MonitorActivity"
     tools:deviceIds="wear_square">
 
     <TextView
