--- a/app/src/main/res/layout/activity_monitor.xml
+++ b/app/src/main/res/layout/activity_monitor.xml
@@ -30,7 +30,8 @@
             android:layout_height="wrap_content"
             android:layout_alignBottom="@+id/monitor_main_value"
             android:layout_toRightOf="@+id/monitor_main_value"
-            android:src="@drawable/common_full_open_on_phone"/>
+            android:src="@drawable/common_full_open_on_phone"
+            android:id="@+id/imageView" />
         <TextView
             android:id="@+id/monitor_second_value"
             android:layout_width="wrap_content"
@@ -62,14 +63,23 @@
             android:layout_alignBottom="@+id/monitor_third_value"
             android:layout_toRightOf="@+id/monitor_third_value"
             android:src="@drawable/common_full_open_on_phone"/>
-        <WebView
+        <!--<WebView
             android:id="@+id/webView"
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:layout_alignParentBottom="true"
             android:layout_alignParentStart="true"
             android:layout_marginBottom="74dp">
-        </WebView>
+        </WebView> -->
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/monitor_end_process"
+            android:gravity="bottom"
+            android:id="@+id/monitor_btn_end"
+            android:onClick="EndProcess"
+            android:layout_alignParentBottom="true"
+            android:layout_toStartOf="@+id/imageView" />
     </RelativeLayout>
 
     <android.support.design.widget.FloatingActionButton
