--- a/app/src/main/res/layout/activity_monitor.xml
+++ b/app/src/main/res/layout/activity_monitor.xml
@@ -63,14 +63,14 @@
             android:layout_alignBottom="@+id/monitor_third_value"
             android:layout_toRightOf="@+id/monitor_third_value"
             android:src="@drawable/common_full_open_on_phone"/>
-        <!--<WebView
+        <WebView
             android:id="@+id/webView"
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:layout_alignParentBottom="true"
             android:layout_alignParentStart="true"
             android:layout_marginBottom="74dp">
-        </WebView> -->
+        </WebView>
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
