--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="darkYellow">#FFC133</color>
+    <color name="brightYellow">#ffe033</color>
+    <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
+    <color name="wine">#581845</color>
 </resources>
