--- a/app/src/main/res/layout/activity_main_old.xml
+++ b/app/src/main/res/layout/activity_main_old.xml
@@ -13,7 +13,9 @@
         android:background="?attr/colorPrimary"
         android:elevation="4dp"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        android:title="HOLA
+        "/>
 
     <include layout="@layout/content_main"></include>
 
