--- a/app/src/main/res/layout/activity_new_crafting.xml
+++ b/app/src/main/res/layout/activity_new_crafting.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+android:id="@+id/new_crafting_ly_coordinator"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
 android:columnCount="2"
@@ -130,6 +131,13 @@ android:stretchMode="columnWidth">
 
         </LinearLayout>
     </ScrollView>
+    <android.support.design.widget.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/new_crafting_floating_start"
+        android:src="@drawable/ic_send_white_18dp"
+        android:layout_gravity="bottom|end"
+        />
 
 </FrameLayout>
 
