--- a/app/src/main/res/layout/activity_monitoring.xml
+++ b/app/src/main/res/layout/activity_monitoring.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+android:id="@+id/ly_coordinator"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
 android:columnCount="2"
@@ -138,6 +139,6 @@ android:stretchMode="columnWidth">
         android:layout_gravity="bottom|end"
         />
 
-</FrameLayout>
+</android.support.design.widget.CoordinatorLayout>
 
 
