--- a/app/src/main/res/layout/activity_new_crafting.xml
+++ b/app/src/main/res/layout/activity_new_crafting.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-android:id="@+id/new_crafting_ly_coordinator"
+android:id="@+id/ly_coordinator"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
 android:columnCount="2"
