--- a/app/src/main/res/layout/dialog_add_cereals.xml
+++ b/app/src/main/res/layout/dialog_add_cereals.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <ListView
         android:id="@+id/dialog_add_cereals_list"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="5"/>
+        android:layout_width="match_parent"
+        android:layout_height="400dp"
+        android:orientation="vertical"
+        android:layout_weight="0"/>
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -16,12 +17,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/cereal_ok_button"
+            android:layout_alignParentBottom="true"
             android:text="@string/ok"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/cereal_cancel_button"
             android:text="@string/cancel"
+            android:layout_alignParentBottom="true"
             android:layout_toRightOf="@+id/cereal_ok_button"/>
     </RelativeLayout>
 
