--- a/app/src/main/res/layout/dialog_add_hops.xml
+++ b/app/src/main/res/layout/dialog_add_hops.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <ListView
         android:id="@+id/dialog_add_hops_list"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="5"/>
+        android:layout_width="match_parent"
+        android:orientation="vertical"
+        android:layout_height="400dp"
+        android:layout_weight="0"/>
         <!--android:divider="#b5b5b5"
         android:dividerHeight="1dp"-->
     <RelativeLayout
@@ -18,13 +19,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/hop_ok_button"
+            android:layout_alignParentBottom="true"
             android:text="@string/ok"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/hop_cancel_button"
             android:text="@string/cancel"
-            android:layout_toRightOf="@+id/hop_ok_button"/>
+            android:layout_toRightOf="@+id/hop_ok_button"
+            android:layout_alignParentBottom="true"/>
     </RelativeLayout>
 
 </LinearLayout>
