--- a/app/src/main/res/layout/fragment_monitoring_mashing.xml
+++ b/app/src/main/res/layout/fragment_monitoring_mashing.xml
@@ -38,19 +38,27 @@
             android:src="@drawable/common_full_open_on_phone"/>
 
 
-        <WebView
+        <!--<WebView
             android:id="@+id/webView"
             android:layout_width="match_parent"
             android:layout_height="250dp"
             android:layout_below="@id/monitor_third_value"
             android:layout_marginTop="90dp"
             android:layout_marginBottom="25dp">
-        </WebView>
+        </WebView> -->
+
+        <com.jjoe64.graphview.GraphView
+            android:layout_width="match_parent"
+            android:layout_height="250dp"
+            android:layout_below="@id/monitor_second_value"
+            android:layout_marginTop="90dp"
+            android:layout_marginBottom="25dp"
+            android:id="@+id/graph"/>
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/webView"
+            android:layout_below="@id/graph"
             android:orientation="vertical">
             <TextView
                 android:layout_width="wrap_content"
