--- a/Android app/app/src/main/res/layout/fragment_monitoring_heating.xml
+++ b/Android app/app/src/main/res/layout/fragment_monitoring_heating.xml
@@ -37,34 +37,28 @@
             android:layout_toRightOf="@+id/monitor_second_value"
             android:src="@drawable/common_full_open_on_phone"/>
 
-        <TextView
-            android:id="@+id/monitor_third_value"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@+id/monitor_second_value"
-            android:paddingLeft="30dp"
-            android:paddingTop="15dp"
-            android:textSize="40dp"
-            android:text="10ºC"/>
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/monitor_third_value"
-            android:layout_toRightOf="@+id/monitor_third_value"
-            android:src="@drawable/common_full_open_on_phone"/>
-        <WebView
+
+        <!--<WebView
             android:id="@+id/webView"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="250dp"
             android:layout_below="@id/monitor_third_value"
-            android:layout_marginTop="50dp"
-            android:layout_marginBottom="74dp">
-        </WebView>
+            android:layout_marginTop="90dp"
+            android:layout_marginBottom="25dp">
+        </WebView> -->
+
+        <com.jjoe64.graphview.GraphView
+            android:layout_width="match_parent"
+            android:layout_height="250dp"
+            android:layout_below="@id/monitor_second_value"
+            android:layout_marginTop="90dp"
+            android:layout_marginBottom="25dp"
+            android:id="@+id/graph"/>
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/webView"
+            android:layout_below="@id/graph"
             android:orientation="vertical">
             <TextView
                 android:layout_width="wrap_content"
