PreferencesDialogFragment to control user preferences

--- a/Android app/app/src/main/res/layout/activity_main_menu.xml
+++ b/Android app/app/src/main/res/layout/activity_main_menu.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     android:id="@+id/ly_coordinator"
-    tools:context="com.example.nando.arti.MainMenuActivity">
+    tools:context="nandroid.artesanus.gui.MenuActivity">
 
     <LinearLayout
         android:id="@+id/MainLayout"
