--- a/Android app/app/src/main/res/layout/activity_new_crafting.xml
+++ b/Android app/app/src/main/res/layout/activity_new_crafting.xml
@@ -20,7 +20,7 @@ android:stretchMode="columnWidth">
             android:layout_width="match_parent"
             android:layout_height="0px"
             android:layout_weight="1"
-            android:background="@android:color/white"/>
+            android:background="@drawable/backgroundpattern"/>
     </android.support.design.widget.AppBarLayout>
 
     <ScrollView
