--- a/Android app/app/src/main/res/values/arrays.xml
+++ b/Android app/app/src/main/res/values/arrays.xml
@@ -4,4 +4,14 @@
         <item>Español</item>
         <item>Inglés</item>
     </string-array>
+    <string-array name="string_array_processes">
+        <item>Maceracion</item>
+        <item>Coccion</item>
+        <item>Fermentacion</item>
+    </string-array>
+    <string-array name="string_array_new_crafting_tabs">
+        <item>Tipo</item>
+        <item>Cocción</item>
+    </string-array>
+
 </resources>
