--- a/Android app/app/src/main/res/layout/fragment_new_crafting_mashing.xml
+++ b/Android app/app/src/main/res/layout/fragment_new_crafting_mashing.xml
@@ -5,33 +5,45 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="10dp"
+        android:paddingTop="15dp">
 
         <LinearLayout
+            android:layout_marginTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:divider="@drawable/divider_drawable"
-            android:showDividers="end">
+            android:background="@color/darkYellow"
+            android:alpha="0.90">
             <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
                 <TextView
+                    android:padding="5dp"
                     android:id="@+id/new_crafting_steps"
                     android:layout_height="wrap_content"
                     android:layout_width="wrap_content"
-                    android:text="@string/new_crafting_step"></TextView>
+                    android:text="@string/new_crafting_step"
+                    android:textColor="@color/white"
+                    android:shadowDx="3"
+                    android:shadowDy="3"
+                    android:shadowRadius="1.8"
+                    android:shadowColor="@color/black"
+                    ></TextView>
                 <ImageView
                     android:id="@+id/new_crafting_add_step"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/ic_add_black_18dp"
-                    android:layout_toEndOf="@+id/new_crafting_steps"/>
+                    android:layout_toEndOf="@+id/new_crafting_steps"
+                    android:padding="5dp"/>
             </RelativeLayout>
             <ListView
                 android:id="@+id/new_crafting_step_added"
                 android:layout_height="wrap_content"
-                android:layout_width="match_parent"></ListView>
+                android:layout_width="match_parent"
+                android:padding="10dp"></ListView>
         </LinearLayout>
 
     </LinearLayout>
