--- a/Android app/app/src/main/res/layout/content_splash.xml
+++ b/Android app/app/src/main/res/layout/content_splash.xml
@@ -4,21 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.nando.arti.SplashActivity"
     tools:showIn="@layout/activity_splash">
 
-    <FrameLayout
+    <VideoView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true">
-    </FrameLayout>
-
-
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:id="@+id/splah_vv"
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="0dp"/>
 
 </RelativeLayout>
